// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button buttonSize='small' /> renders the small variant 1`] = `
<button
  className="button solid primary small"
  type="submit"
>
  Foo
</button>
`;

exports[`<Button/> renders the button 1`] = `
<button
  className="button solid primary"
  type="submit"
>
  Foo
</button>
`;
